overlays/rancher-desktop/klutch-bind-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klutch-bind-backend
  namespace: bind
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"      
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: klutch-bind-backend
            port:
              number: 443
